--- a/2.html
+++ b/2.html
@@ -11,7 +11,9 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
+  <input type="checkbox">css
   <h2>CSS</h2>
   <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
     CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 </body>
+</html>
