--- a/3.html
+++ b/3.html
@@ -19,3 +19,4 @@
     It is multi-paradigm, supporting event-driven, functional, and imperative programming styles.
     It has application programming interfaces (APIs) for working with text, dates, regular expressions, standard data structures, and the Document Object Model (DOM).</p>
 </body>
+</html>
