--- a/index.html
+++ b/index.html
@@ -24,3 +24,4 @@ Website content is provided by a myriad of companies, organizations, government 
 The World Wide Web has become the world's dominant software platform. It is the primary tool billions of people worldwide use to interact with the Internet.
 The Web was originally conceived as a document management system.It was invented by Tim Berners-Lee at CERN in 1989 and opened to the public in 1991.</p>
 </body>
+</html>
