--- a/1.html
+++ b/1.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NBJXC2Z2R1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NBJXC2Z2R1');
+</script>
   <title>WEB1-HTML</title>
   <meta charset="utf-8">
 </head>
