--- a/2.html
+++ b/2.html
@@ -12,17 +12,42 @@
 </script>
   <title>WEB1-CSS</title>
   <meta charset="utf-8">
+  <style>
+   #active{
+        color:red;
+   }
+   .saw {
+     color:gray;
+   }
+   a {
+     color:black;
+     text-decoration: none;
+   }
+   h1{
+    font-size:45px;
+    text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" id="active">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <input type="checkbox">css
+<!--
+  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+  <ol>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+  </ol>
+-->
+
   <h2>CSS</h2>
   <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML).
-    CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+    CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript. CSS is designed to enable the separation of content and presentation, including layout, colors, and fonts.[3]
+    This separation can improve content accessibility; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate.</p>
 </body>
 </html>
